# botanim-bot

./: .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
botanim-bot/: all_books.txt  books.py  bot.py  db.sql  db.sqlite3  message_texts.py
